# web_modules

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml
.github/workflows/: audit.yml  ci.yml  pages.yml  release-binaries.yml  release.yml
examples/: README.md
examples/bootstrap/: .gitignore  Cargo.toml  README.md
examples/bootstrap/src/: main.rs
examples/bootstrap/web/: app.scss  index.html
examples/compose/: .gitignore  Cargo.toml  README.md
examples/compose/src/: main.rs
examples/compose/web/: app.scss  app.ts  package.json
examples/d3/: .gitignore  Cargo.toml  README.md
examples/d3/src/: main.rs
examples/d3/web/: chart.ts  index.html
examples/embedded/: Cargo.toml  README.md  build.rs
examples/embedded/src/: main.rs
examples/embedded/web/: app.ts  styles.scss
examples/gh-pages/: app.ts  index.html.tera  package.json  styles.scss
examples/lit-element/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
examples/lit-element/src/: main.rs
examples/lit-element/tests/: counter.spec.ts
examples/lit-element/web/: app.ts  counter.ts  package.json  styles.scss
examples/md-tmpl/: Cargo.toml  README.md  build.rs
examples/md-tmpl/src/: main.rs
examples/md-tmpl/templates/: _commit_row.tmpl.md  commits.tmpl.md
examples/md-tmpl/web/: _footer.tmpl.md  about.tmpl.md
examples/react-esm/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
examples/react-esm/src/: main.rs
examples/react-esm/tests/: counter.spec.ts
examples/react-esm/web/: app.tsx  package.json
examples/react-umd/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
examples/react-umd/src/: main.rs
examples/react-umd/tests/: counter.spec.ts
examples/react-umd/web/: app.ts  index.html
examples/tauri/: .gitignore  README.md
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/src/: main.rs
examples/tauri/web/: app.ts  index.html  styles.scss
src/: builder_shared.rs  cli_config.rs  error.rs  lib.rs
src/core/: importmap.rs  mod.rs  module_graph.rs  mount.rs  npm_link.rs  reject.rs  static_files.rs  symlinks.rs  tsconfig.rs  vendor.rs
src/processors/: dts.rs  i18n.rs  icons.rs  minify.rs  mod.rs  scss.rs  typescript.rs
src/serve/: dev.rs  mod.rs  server.rs  serving.rs  symlink_move.rs
tests/: bundle.rs  bundle_split.rs  ci.rs  compose.rs  examples.rs  multi_source.rs  output.rs  prune.rs  security.rs  server.rs  symlink_modes.rs  traversal.rs  vendor.rs
tests/embedded_fixture/: app.js  app.scss
tests/embedded_map_fixture/: importmap.json
